--- a/travel_blog/package.json
+++ b/travel_blog/package.json
@@ -7,13 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bulma": "^0.9.4",
+    "mapbox-gl": "^2.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-map-gl": "^7.0.20",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "wouter": "^2.9.0",
-    "mapbox-gl": "^2.9.2"
+    "wouter": "^2.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
