--- a/travel_blog/package.json
+++ b/travel_blog/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bulma": "^0.9.4",
+    "bulma-carousel": "^4.0.24",
     "bulma-social": "^2.1.0",
     "mapbox-gl": "^2.11.1",
     "react": "^18.2.0",
@@ -14,6 +15,7 @@
     "react-icons": "^4.7.1",
     "react-map-gl": "^7.0.20",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.1.1",
     "web-vitals": "^2.1.4",
     "wouter": "^2.9.0"
   },
